Fix collapse issue

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -815,7 +815,9 @@ input[type="button"].btn-block {
 .collapse {
   display: none; }
   .collapse.in {
-    display: block; }
+    display: block;
+    visibility: visible;
+  }
 
 tr.collapse.in {
   display: table-row; }
